feat: Integrate Tauri for desktop application development, including a new release workflow and configuration.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"migrate:up": "tsx scripts/migrate.ts up",
 		"migrate:down": "tsx scripts/migrate.ts down",
 		"cleanup-db": "tsx scripts/cleanup-db.ts",
-		"format": "biome format . --write"
+		"format": "biome format . --write",
+		"tauri": "tauri",
+		"dev:tauri": "tauri dev",
+		"build:tauri": "tauri build"
 	},
 	"dependencies": {
 		"@designcombo/animations": "^5.4.2",
@@ -100,6 +103,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@designcombo/types": "^5.4.2",
 		"@tailwindcss/postcss": "^4",
+		"@tauri-apps/cli": "^2.9.6",
 		"@types/lodash": "^4.17.17",
 		"@types/tinycolor2": "^1.4.6",
 		"tailwindcss": "^4",
